[package]
name = "mpcd"
version = "0.1.0"
authors = ["Antonín Dufka <xdufka1@fi.muni.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
pcsc = { version = "2", optional = true }
log = "0.4"
env_logger = "0.9"
p256 = { version = "0.9", features = ["arithmetic", "ecdsa-core", "ecdsa"] }
hex = "0.4"
rand = "*"
sha2 = "0.9"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.6"

[features]
default = ["smartcard"]
smartcard = ["pcsc"]
