[package]
name = "mediator"
version = "0.1.0"
authors = ["Antonín Dufka <xdufka1@fi.muni.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.16", features = ["cargo"] }
pcsc = { version = "2", optional = true }
log = "0.4"
env_logger = "0.8"
k256 = { version = "0.9", features = ["arithmetic"] }
hex = "0.4.2"
rand = "*"
sha2 = "0.9.3"

[features]
default = ["smartcard"]
smartcard = ["pcsc"]
